Fixed an issue connected with visibility modal windows

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -3,7 +3,7 @@
   position: absolute;
   width: max-content;
   box-shadow: var(--shadow-dark);
-  z-index: 10;
+  z-index: 150;
   background-color: #ffffff;
   border-radius: 5px;
 
