--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -63,7 +63,7 @@
       }
 
       &.selected {
-        background-color: green;
+        background-color: #000000;
       }
     }
   }
