--- a/src/layouts/container/Modal/ModalWrapper.scss
+++ b/src/layouts/container/Modal/ModalWrapper.scss
@@ -10,7 +10,7 @@
   &--bg-opacity {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
@@ -22,8 +22,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-
     }
 
   }
